@@ -87,9 +87,6 @@
 /* define if your X server has XInternAtoms() */
 #undef HAVE_XINTERNATOMS
 
-/* define if processor is x86 */
-#undef ASM_X86
-
-/* define if processor is x86 with MMX(tm) support */
-#undef ASM_X86_MMX
+/* define if you want Hermes support */
+#undef HAVE_HERMES
 
