@@ -167,44 +167,6 @@ AC_TYPE_SIGNAL
 
     
 
-dnl Compiler/architecture specific optimizations
-dnl ============================================
-    
-
-dnl GCC/as with MMX support
-dnl --------------------
-
-# until we fix it, leave it disabled
-if test "$ac_cv_prog_gcc" = yes; then
-    x86=0
-    changequote(,)dnl
-    case "$host_cpu" in
-	i[3456]86) x86=1
-	;;
-    esac
-    changequote([,])dnl
-
-    if  test "$host_os" != "linux" -a "$host_os" != "linux-gnu" ; then
-	x86=0
-    fi
-
-    if test $x86 = 1; then
-        AC_DEFINE(ASM_X86)
-
-	AC_CACHE_CHECK(whether gcc supports MMX(tm) inline asm,
-		       ac_cv_c_inline_mmx,
-		       [AC_TRY_LINK(,[asm ("movq %mm0, %mm1");],
-		       ac_cv_c_inline_mmx=yes,
-		       ac_cv_c_inline_mmx=no)])
-
-	if test "x$ac_cv_c_inline_mmx" = xyes; then
-		AC_DEFINE(ASM_X86_MMX)
-	fi
-    fi
-fi
-
-
-
 dnl gettext
 dnl =======
 
@@ -599,6 +561,28 @@ AC_SUBST(X_EXTRA_LIBS)
 dnl ===============================================
 dnl 		End of stuff that uses X
 dnl ===============================================
+
+
+
+dnl Hermes Support
+dnl ==============
+
+AC_ARG_ENABLE(hermes,
+  [  --disable-hermes	  disable Hermes support for wrlib ],
+     hermes=$enableval, hermes=yes, hermes=no)
+
+if test x$hermes = xyes; then
+   WM_CHECK_LIB(Hermes, Hermes_ConverterRequest, [])
+   
+   if test x$ac_cv_lib_Hermes_Hermes_ConverterRequest = xyes; then
+      WM_CHECK_HEADER(Hermes/Hermes.h)
+      if test x$ac_cv_header_Hermes_Hermes_h = xyes; then
+      	 GFXLIBS="$GFXLIBS -lHermes"
+	 AC_DEFINE(HAVE_HERMES)
+      fi
+   fi
+fi
+
 
 
 dnl PNG Support
@@ -1018,6 +1002,9 @@ echo "Installation path prefix: $prefix"
 echo "Installation path prefix for binaries: $_bindir"
 echo "Installation path for WPrefs.app: $wprefsdir" | sed -e 's|\$(prefix)|'"$prefix|"
 echo "Graphic format libraries: $supported_gfx"
+if test x$hermes = xyes; then
+    echo "Hermes support for wrlib enabled"
+fi
 echo "Sound support: $sound"
 echo "Translated message files to install: $mof"
 if test "x$MOFILES" != "x"; then
