@@ -148,6 +148,8 @@ typedef struct RContext {
 	unsigned int use_shared_pixmap:1;
 	unsigned int optimize_for_speed:1;
     } flags;
+    
+    struct RHermesData *hermes_data;   /* handle for Hermes stuff */
 } RContext;
 
 
