@@ -6,6 +6,7 @@ Changes since version 0.64.0:
 - applied patch for wkdemenu (Malcolm Cowe <malk@bruhaha.co.uk>)
 - added WINDOWS_MENU submenu type for root menu (Bastien Nocera <hadess@hadess.net>)
 - added kbd shortcuts for icon chooser
+- use Hermes in wrlib
 
 Changes since version 0.63.1:
 .............................
